<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="atlas.finalthis.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/titleTextView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/titleTextView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:id="@+id/editText"
        android:hint="@string/treat_edit" />

    <Switch
        android:text="@string/dairy_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editText"
        android:layout_alignParentEnd="true"
        android:id="@+id/dairySwitch" />

    <Spinner
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:id="@+id/spinner"
        android:entries="@array/flavors" />

    <ToggleButton
        android:text="@string/toggle_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toggleButton2"
        android:layout_alignBaseline="@+id/spinner"
        android:layout_alignBottom="@+id/spinner"
        android:layout_alignParentEnd="true"
        android:textOff="@string/toggle_off"
        android:textOn="@string/toggle_on" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/treatRadioGroup"
        android:orientation="horizontal"
        android:layout_below="@+id/spinner"
        android:layout_marginTop="20dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cream"
            android:id="@+id/radioButton1"
            android:layout_marginStart="20dp"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yogurt"
            android:id="@+id/radioButton2"
            android:layout_marginStart="20dp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gelato"
            android:id="@+id/radioButton3"
            android:layout_marginStart="20dp"/>

    </RadioGroup>

    <CheckBox
        android:text="@string/fudge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/checkBox"
        android:layout_alignEnd="@+id/editText"
        android:id="@+id/checkBox2" />

    <CheckBox
        android:text="@string/nuts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox3"
        android:layout_alignBaseline="@+id/checkBox2"
        android:layout_alignBottom="@+id/checkBox2"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/dairySwitch" />

    <CheckBox
        android:text="@string/sprinkles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/treatRadioGroup" />

    <Button
        android:text="@string/treat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:id="@+id/button"
        android:onClick="treatMe"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_below="@+id/button"
        android:layout_alignEnd="@+id/treatRadioGroup" />

    <TextView
        android:text="@string/treat"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:id="@+id/treatTextView"
        android:layout_below="@+id/button"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/find_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/checkBox3"
        android:id="@+id/button2" />
</RelativeLayout>
